--- a/apps/admin/view/default/content/form.html
+++ b/apps/admin/view/default/content/form.html
@@ -36,10 +36,10 @@
 	                        <td>
 								
 	                        	{if($value->id!=1)}
-									<a href="{url./admin/Form/mod/id/'.$value->id.'/action/addmenu}?backurl={$backurl}" class="layui-btn layui-btn-xs layui-btn-primary">添加到菜单</a>
+									<a href="{url./admin/Form/mod/id/'.$value->id.'/action/addmenu}{$btnqs}" class="layui-btn layui-btn-xs layui-btn-primary">添加到菜单</a>
 	                        		<a href="{url./admin/Form/del/id/'.$value->id.'/action/delform}" onclick="return confirm('您确定要删除么？')" class="layui-btn layui-btn-xs layui-btn-danger" title="删除">删除</a>
 	                            {/if}
-	                            <a href="{url./admin/Form/mod/id/'.$value->id.'/action/modform}?backurl={$backurl}" class="layui-btn layui-btn-xs">修改</a>
+	                            <a href="{url./admin/Form/mod/id/'.$value->id.'/action/modform}{$btnqs}" class="layui-btn layui-btn-xs">修改</a>
 								
 	                        </td>
 	                    </tr>
@@ -226,7 +226,7 @@
 	  </ul>
 	  <div class="layui-tab-content">
 	  	<div class="layui-tab-item layui-show">
-	  		<form action="{url./admin/Form/mod/id/'.[$get.id].'/action/modform}?{$server.QUERY_STRING}" method="post" class="layui-form">
+	  		<form action="{url./admin/Form/mod/id/'.[$get.id].'/action/modform}{$backurl}" method="post" class="layui-form">
 	  			<input type="hidden" name="formcheck" value="{$formcheck}" > 
 	  			<div class="layui-form-item">
                      <label class="layui-form-label">表单名称</label>
@@ -262,7 +262,7 @@
 	  </ul>
 	  <div class="layui-tab-content">
 	  	<div class="layui-tab-item layui-show">
-	  		<form action="{url./admin/Form/mod/id/'.[$get.id].'}?{$server.QUERY_STRING}" method="post" class="layui-form">
+	  		<form action="{url./admin/Form/mod/id/'.[$get.id].'}{$backurl}" method="post" class="layui-form">
 	  			<input type="hidden" name="formcheck" value="{$formcheck}" > 
                 <div class="layui-form-item">
                      <label class="layui-form-label">字段描述</label>
