--- a/apps/admin/view/default/content/model.html
+++ b/apps/admin/view/default/content/model.html
@@ -15,6 +15,8 @@
 	                    	<th>序号</th>
 	                        <th>名称</th>
 	                        <th>类型</th>
+	                        <th>列表页URL名称</th>
+	                        <th>详情页URL名称</th>
 	                        <th>列表页模板</th>
 	                        <th>详情页模板</th>
 	                        <th>状态</th>
@@ -30,6 +32,8 @@
 								{if($value->type==1)}单页{/if}
 	                        	{if($value->type==2)}列表{/if}
 							</td>
+							<td>[value->listurl]</td>
+	                        <td>[value->contenturl]</td>
 	                        <td>[value->listtpl]</td>
 	                        <td>[value->contenttpl]</td>
 	                        <td>
@@ -56,20 +60,34 @@
 	  	   		<form action="{url./admin/Model/add}" method="post" class="layui-form">
 	                <input type="hidden" name="formcheck" value="{$formcheck}" > 
 	                <div class="layui-form-item">
-	                     <label class="layui-form-label">模型名称</label>
+	                     <label class="layui-form-label">模型名称  <span class="layui-text-red">*</span></label>
 	                     <div class="layui-input-block">
 	                     	<input type="text" name="name" required lay-verify="required" placeholder="请输入模型名称" class="layui-input">
 	                     </div>
 	                </div>
 	                
 	                 <div class="layui-form-item">
-	                     <label class="layui-form-label">模型类型</label>
+	                     <label class="layui-form-label">模型类型  <span class="layui-text-red">*</span></label>
 	                     <div class="layui-input-block">
 	                     	 <select name="type" lay-verify="required">
 		                     	<option value="">请选择模型类型</option>
 		                        <option value="1">单页</option>
 		                        <option value="2">列表</option>
 		                    </select>
+	                     </div>
+	                </div>
+	                
+	               <div class="layui-form-item">
+	                     <label class="layui-form-label">列表页URL名称 </label>
+	                     <div class="layui-input-block">
+	                     	<input type="text" name="listurl" placeholder="请输入列表页地址名称，如：news，单页时不用填写" class="layui-input">
+	                     </div>
+	                </div>
+	                
+	                <div class="layui-form-item">
+	                     <label class="layui-form-label">详情页URL名称 </label>
+	                     <div class="layui-input-block">
+	                     	<input type="text" name="contenturl"  placeholder="请输入详情页地址名称，如：new" class="layui-input">
 	                     </div>
 	                </div>
 	                
@@ -81,9 +99,9 @@
 	                </div>
 	                
 	                <div class="layui-form-item">
-	                     <label class="layui-form-label">内容页模板</label>
+	                     <label class="layui-form-label">详情页模板</label>
 	                     <div class="layui-input-block">
-	                     	<input type="text" name="contenttpl" placeholder="请输入内容页模板" class="layui-input">
+	                     	<input type="text" name="contenttpl" placeholder="请输入详情页模板" class="layui-input">
 	                     </div>
 	                </div>
 	                
@@ -115,23 +133,37 @@
 	  </ul>
 	  <div class="layui-tab-content">
 	  	<div class="layui-tab-item layui-show">
-	  		<form action="{url./admin/Model/mod/id/'.[$get.id].'}?{$server.QUERY_STRING}" method="post" class="layui-form">
+	  		<form action="{url./admin/Model/mod/id/'.[$get.id].'}{$backurl}" method="post" class="layui-form">
 	  			<input type="hidden" name="formcheck" value="{$formcheck}" > 
 	  			<div class="layui-form-item">
-                     <label class="layui-form-label">模型名称</label>
+                     <label class="layui-form-label">模型名称 <span class="layui-text-red">*</span></label>
                      <div class="layui-input-block">
                      	<input type="text" name="name" required lay-verify="required" value="{$model->name}" placeholder="请输入模型名称" class="layui-input">
                      </div>
                 </div>
                 
                  <div class="layui-form-item">
-                     <label class="layui-form-label">模型类型</label>
+                     <label class="layui-form-label">模型类型  <span class="layui-text-red">*</span></label>
                      <div class="layui-input-block">
                      	 <select name="type" lay-verify="required">
 	                     	<option value="">请选择模型类型</option>
 	                        <option value="1" {if([$model->type]==1)}selected{/if}>单页</option>
 	                        <option value="2" {if([$model->type]==2)}selected{/if}>列表</option>
 	                    </select>
+                     </div>
+                </div>
+                
+                <div class="layui-form-item">
+                     <label class="layui-form-label">列表页URL名称</label>
+                     <div class="layui-input-block">
+                     	<input type="text" name="listurl" value="{$model->listurl}" placeholder="请输入列表页地址名称，如：news，单页时不用填写" class="layui-input">
+                     </div>
+                </div>
+                
+                <div class="layui-form-item">
+                     <label class="layui-form-label">详情页URL名称</label>
+                     <div class="layui-input-block">
+                     	<input type="text" name="contenturl" value="{$model->contenturl}" placeholder="请输入详情页地址名称，如：new" class="layui-input">
                      </div>
                 </div>
                 
@@ -143,9 +175,9 @@
                 </div>
                 
                 <div class="layui-form-item">
-                     <label class="layui-form-label">内容页模板</label>
+                     <label class="layui-form-label">详情页模板</label>
                      <div class="layui-input-block">
-                     	<input type="text" name="contenttpl"  value="{$model->contenttpl}" placeholder="请输入内容页模板" class="layui-input">
+                     	<input type="text" name="contenttpl"  value="{$model->contenttpl}" placeholder="请输入详情页模板" class="layui-input">
                      </div>
                 </div>
                 
