--- a/apps/admin/view/default/system/menu.html
+++ b/apps/admin/view/default/system/menu.html
@@ -142,7 +142,7 @@
 	  </ul>
 	  <div class="layui-tab-content">
 	  	<div class="layui-tab-item layui-show">
-	  	 <form action="{url./admin/Menu/mod/mcode/'.[$get.mcode].'}" method="post" class="layui-form">
+	  	 <form action="{url./admin/Menu/mod/mcode/'.[$get.mcode].'}{$backurl}" method="post" class="layui-form">
                 <input type="hidden" name="formcheck" value="{$formcheck}" > 
                 <div class="layui-form-item">
 				    <label class="layui-form-label">父菜单</label>
