--- a/template/default/comm/foot.html
+++ b/template/default/comm/foot.html
@@ -6,7 +6,7 @@
             	<h5>{pboot:companyname}</h5>
                 <ul class="lh-2">
                 	<li>营业执照：{pboot:companyblicense}  </li>
-                    <li>备案号码：{pboot:siteicp} </li>
+                    <li>备案号码：<a href="http://beian.miit.gov.cn/" target="_blank">{pboot:siteicp}</a> </li>
                     <li>地址：{pboot:companyaddress} </li>
                 </ul>
             </div>
