--- a/template/default/search.html
+++ b/template/default/search.html
@@ -13,7 +13,7 @@
                   <div class="card-img-150"><a href="[search:link]"><img class="card-img-top" src="[search:ico]" alt="[search:title]"></a></div>
                   <div class="card-body">
                     <h5 class="card-title"><a href="[search:link]">[search:title len=12]</a></h5>
-                    <p class="card-text">[search:content drophtml=1 len=50]</p>
+                    <p class="card-text">[search:content drophtml=1 dropblank=1 len=50]</p>
                   </div>
                </div>
          	</div>
