--- a/apps/admin/view/default/common/head.html
+++ b/apps/admin/view/default/common/head.html
@@ -38,7 +38,7 @@
     	<li class="menu-ico" title="显示或隐藏侧边栏"><i class="fa fa-bars" aria-hidden="true"></i></li>
 	</ul>
 	{if(![$one_area])}
-	<form method="post" action="{url./admin/index/area}" class="area-select">
+	<form method="post" action="{url./admin/Index/area}" class="area-select">
 		<input type="hidden" name="formcheck" value="{$formcheck}" > 
 		<div class="layui-col-xs8">
 		   <select name="acode">
