--- a/apps/admin/view/default/content/label.html
+++ b/apps/admin/view/default/content/label.html
@@ -203,7 +203,7 @@
 	  </ul>
 	  <div class="layui-tab-content">
 	  	<div class="layui-tab-item layui-show">
-	  		  <form action="{url./admin/Label/mod/id/'.[$get.id].'}" method="post" class="layui-form">
+	  		  <form action="{url./admin/Label/mod/id/'.[$get.id].'}{$backurl}" method="post" class="layui-form">
 	  		  	<input type="hidden" name="formcheck" value="{$formcheck}" > 
 	  		  	<div class="layui-form-item">
                      <label class="layui-form-label">标签名称</label>
