--- a/apps/admin/view/default/content/link.html
+++ b/apps/admin/view/default/content/link.html
@@ -111,7 +111,7 @@
 	  </ul>
 	  <div class="layui-tab-content">
 	  	<div class="layui-tab-item layui-show">
-	  		 <form action="{url./admin/Link/mod/id/'.[$get.id].'}?{$server.QUERY_STRING}" method="post" class="layui-form">
+	  		 <form action="{url./admin/Link/mod/id/'.[$get.id].'}{$backurl}" method="post" class="layui-form">
 	  		 	<input type="hidden" name="formcheck" value="{$formcheck}" > 
 	  		 	<div class="layui-form-item">
                      <label class="layui-form-label">分组</label>
