--- a/apps/admin/view/default/content/message.html
+++ b/apps/admin/view/default/content/message.html
@@ -67,7 +67,7 @@
 	  </ul>
 	  <div class="layui-tab-content">
 	  	<div class="layui-tab-item layui-show">
-	  		 <form action="{url./admin/Message/mod/id/'.[$get.id].'}?{$server.QUERY_STRING}" method="post" class="layui-form">
+	  		 <form action="{url./admin/Message/mod/id/'.[$get.id].'}{$backurl}" method="post" class="layui-form">
 	  		 	<input type="hidden" name="formcheck" value="{$formcheck}" > 
 	  		 	<div class="layui-form-item">
                      <label class="layui-form-label">回复内容</label>
