--- a/apps/admin/view/default/content/tags.html
+++ b/apps/admin/view/default/content/tags.html
@@ -71,7 +71,7 @@
 	  </ul>
 	  <div class="layui-tab-content">
 	  	<div class="layui-tab-item layui-show">
-	  		 <form action="{url./admin/Tags/mod/id/'.[$get.id].'}?{$server.QUERY_STRING}" method="post" class="layui-form">
+	  		 <form action="{url./admin/Tags/mod/id/'.[$get.id].'}{$backurl}" method="post" class="layui-form">
 	  		 	<input type="hidden" name="formcheck" value="{$formcheck}" > 
 
                 <div class="layui-form-item">
