--- a/apps/admin/view/default/system/area.html
+++ b/apps/admin/view/default/system/area.html
@@ -104,7 +104,7 @@
 	  </ul>
 	  <div class="layui-tab-content">
 	  	<div class="layui-tab-item layui-show">
-	  	 <form action="{url./admin/Area/mod/acode/'.[$get.acode].'}?{$server.QUERY_STRING}" method="post" class="layui-form">
+	  	 <form action="{url./admin/Area/mod/acode/'.[$get.acode].'}{$backurl}" method="post" class="layui-form">
 	  	 	  <input type="hidden" name="formcheck" value="{$formcheck}" > 
 	  	
                <div class="layui-form-item">
