--- a/apps/admin/view/default/system/type.html
+++ b/apps/admin/view/default/system/type.html
@@ -13,6 +13,7 @@
 	  	   		<form action="{url./admin/Type/index}" method="get" class="layui-form">
 		  	   		<div class="layui-form-item nospace">
 		  	   			<div class="layui-input-inline">
+		  	   			   {$pathinfo}
 					       <select name="field" lay-verify="required">
 	                            <option value="tcode" {if(get('field')=='tcode')}selected="selected" {/if} >类型编码</option>
                                 <option value="name" {if(get('field')=='name')}selected="selected" {/if}>类型名称</option>
@@ -71,7 +72,7 @@
 			</div>
 			
 			<div class="layui-tab-item">
-				 <form action="{url./admin/Type/add}?{$server.QUERY_STRING}" method="post" class="layui-form">
+				 <form action="{url./admin/Type/add}" method="post" class="layui-form">
 				 	<input type="hidden" name="formcheck" value="{$formcheck}" > 
 				 	<div class="layui-form-item">
 	                     <label class="layui-form-label">类型编码</label>
@@ -135,7 +136,7 @@
 		</ul>
 		<div class="layui-tab-content">
 		   <div class="layui-tab-item layui-show">
-		   		 <form action="{url./admin/type/mod/id/'.[$get.id].'}?{$server.QUERY_STRING}" method="post" class="layui-form">
+		   		 <form action="{url./admin/Type/mod/id/'.[$get.id].'}{$backurl}" method="post" class="layui-form">
 					<input type="hidden" name="formcheck" value="{$formcheck}" > 
 					<div class="layui-form-item">
 	                     <label class="layui-form-label">类型名称</label>
