--- a/core/template/error.html
+++ b/core/template/error.html
@@ -11,7 +11,12 @@
 
 <div style="margin-left:10%;margin-top:5%;">
     <div style="margin-bottom:20px;"><img src="{coredir}/template/face02.png" height="120"></div>
-    <div style="font-size:25px;">{info} <span id="time" style="font-size:18px;"></span></div>
+    <div style="font-size:25px;margin-bottom:20px;">{info} <span id="time" style="font-size:18px;"></span></div>
+    <div><span style="font-size:12px;border-top:1px solid #ccc;color:#ccc;padding-top:2px;">
+   		程序版本：{appversion}，
+   		操作系统：{serveros}，
+   		WEB应用：{serversoft}
+    </span></div>
 </div>
 
 {js}
