--- a/template/default/index.html
+++ b/template/default/index.html
@@ -48,7 +48,7 @@
 	                	{pboot:if([list:isheadline]==1)}
 	                		<span class="badge badge-info">头条</span>
 	                	{/pboot:if}
-	                	[list:content drophtml=1 len=50]
+	                	[list:content drophtml=1 dropblank=1 len=50]
                 	</p>
                   </div>
                </div>
@@ -71,7 +71,7 @@
       
       {pboot:content id=1}
       	<div class="row text-secondary mb-5 px-3 lh-2 wow fadeInDown" data-wow-delay="500ms" style="text-indent:30px;">
-            [content:content drophtml=1 len=300]
+            [content:content drophtml=1 dropblank=1 len=442 more='']
       	</div>
      	<div class="text-center wow fadeInDown" data-wow-delay="1s"><h4><a href="[content:link]" class="text-secondary fs-14 fs-sm-16">查看更多</a></h4></div>
       {/pboot:content}
@@ -92,7 +92,7 @@
                 <div class="media mb-3">
                   <div class="media-body">
                      <h5><a href="[list:link]" title="[list:title]">[list:title lencn=20]</a></h5>
-                     <p><a href="[list:link]" class="text-secondary lh-2">[list:content drophtml=1 lencn=60] [list:date style=Y-m-d]</a></p>
+                     <p><a href="[list:link]" class="text-secondary lh-2">[list:content drophtml=1 dropblank=1 lencn=60] [list:date style=Y-m-d]</a></p>
                   </div>
                 </div>
             </div>
