--- a/template/default/productlist.html
+++ b/template/default/productlist.html
@@ -47,7 +47,7 @@
                 	{pboot:if([list:isheadline]==1)}
                 		<span class="badge badge-info">头条</span>
                 	{/pboot:if}
-                	[list:content drophtml=1 lencn=50]
+                	[list:content drophtml=1 dropblank=1 lencn=50]
                 	</p>
                 	<p>
                 	{pboot:tags id=[list:id] scode={sort:tcode}}
